--- a/css/rich/vote10.css
+++ b/css/rich/vote10.css
@@ -1658,7 +1658,7 @@
 
 body#vote,
 body#achieve_sns {
-    background-image: url(../../image_sp/ui/mypage_new/bg/bg_status_mypage_01.png%3F1487720324);
+    background-image: url(../../image_sp/ui/mypage_new/bg/bg_status_mypage_01.png);
     background-size: 7px 7px
 }
 
