--- a/css/timeline.css
+++ b/css/timeline.css
@@ -11,6 +11,7 @@
   }
   hr {
     margin-top: 5px;
+    border-top: 2px solid #3874BB;
   }
 
   #container {
@@ -21,7 +22,7 @@
   header{
     width:100%;
     height:100px;
-    background-color:#045;  
+    background-color:#3874BB;  
   }
 
   #logo{ 
@@ -114,9 +115,8 @@
   }
 
   footer{   
-    width:1200px;
     height:100px;
-    border-top:2px solid #222;
+    border-top:2px solid #3874BB;
     margin-top:20px;
   }
   #bottomMenu{
