--- a/css/timeline.css
+++ b/css/timeline.css
@@ -81,8 +81,13 @@
     margin-top: 12px;
   }
   main h3 {
-    font-size:1.2em;
-    line-height:2.2;
+    font-size: 2.2em;
+    line-height: 2.2;
+    border-top: 2px solid #3874BB;
+    border-bottom: 2px solid #3874BB;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
   }
   .detail p {
     line-height: 1.75;
